--- a/styles.css
+++ b/styles.css
@@ -4,83 +4,158 @@
     margin: 0;
     padding: 0;
     
+    
 }
 
 body {
-    background-color: #e2d2e187;
+    background-color: white;
+    margin: 0 16px;
 }
 
 .buscador {
-    
-    background-color: gray;
-    border: 15px solid rgba(231, 231, 231, 0.356);
+    display: flex;
+    background-color: rgba(128, 128, 128, 0.19);
+    border-radius: 8px;
     margin: 15px;
 
 }
+a {
+    text-decoration: none;
+    color: white;
+}
+
+a:hover {
+    text-decoration: none;
+    color: black;
+}
+
+a:visited { 
+    text-decoration: none; 
+    
+   }
+
 
 .menu {
-   
-    width: 100%;
-    
     margin: 15px;
-    background-color: gray;
-    border: 8px solid gray;
-}
-
- 
-ul {
     margin-left: 15px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-items: center;
+    justify-content: space-around;
+    
 }
 
-li {
-    list-style: none;
-    
-    margin: 15px;
-    background-color: rgba(255, 0, 0, 0);
-    padding: 1px;
-}
 
 .card {
        
-    width: 100%;
-    margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
+    
     padding: 15px;
     border: white solid 8px;
-    background-color: gray;
-    
-}
-
-img {
-    width: 50%;
-    height: 50%;
-    margin-left: 25%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 15px;
-    margin-top: 25%;
-}
-
-h3 {
-    font-size: small;
-    font-family: sans-serif;
-}
-
-.name {
-    position: absolute;
-    background-color: beige;
-}
-
-#icon {
-    width: 80%;
-    height: 80%;
-}
-
-.name_prop {
-    position: relative;
-    background-color: beige;
+    margin: 15px;
     
 }
+
+
+.card-content {
+display: flex;
+flex-direction: row;
+gap: 20px;
+padding-bottom: 5px;
+margin: 15px;
+
+
+}
+
+
+
+.icon {
+    flex: 1;
+    text-align: end;
+}
+
+.card-image {
+    width: 100%;
+    border-radius: 15px;
+    
+}
+
+.buscador-input {
+    width: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 15px;
+    
+}
+
+.icon-search {
+   width: 50%;
+   margin-top: 1rem;
+   margin-right: 15px;
+   flex: 1;
+   justify-content: end;
+}
+.name_id {
+    font-family: sans-serif;
+    font-size: small;
+    
+    padding: 2px;
+}
+
+.name_id:nth-child(2) {
+
+    font-weight: lighter;
+
+
+}
+
+.foto {
+    margin-top: 8px;
+    border-radius: 5px;
+}
+
+.animal-list {
+    background-color: white;
+    padding: 8px;
+    padding-right: 17px;
+    padding-left: 17px;    
+    font-family: sans-serif;
+    font-size: small;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);  
+    display: flex;
+}
+
+.animal-list:hover {
+    background-color: black;
+    color: white;
+}
+
+.icon-animal {
+    width: 20%;
+    padding: auto;
+    margin-right: 10px;
+    
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    
+
+}
+
+
+@media (max-width: 600px) {
+   
+.container {
+    display: flex;
+    flex-direction: column;
+    
+}
+}
+    
+
+
